Added global supper club info

--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
                     <h2 class="section-heading">How We Do</h2>
                     <h3 class="section-subheading text-muted">Living the mission of Your Soul Care Community</h3>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/Passion.jpg" alt="" />
+                                <img class="img-fluid" src="assets/Passion.jpeg" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">The Conversation</div>
@@ -140,7 +140,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/CommSVC.jpg" alt="" />
+                                <img class="img-fluid" src="assets/CommSvc.jpeg" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Community Service</div>
@@ -150,11 +150,26 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                            <a class="portfolio-link" href="https://cpeh67ncx46.typeform.com/to/Da9uqQSh">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">Join The List</div>
+                                </div>
+                                <img class="img-fluid" src="assets/SupperClub.jpeg" alt="" />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Supper Club</div>
+                                <div class="portfolio-caption-subheading text-muted">Once a month members of our community come together for a time of fellowship and fun at a metro-Atlanta restaurant. To keep intimacy high, we keep numbers low. <a class="text-info" href="https://cpeh67ncx46.typeform.com/to/Da9uqQSh">Join the list </a>TODAY!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/fillingstation.jpg" alt="" />
+                                <img class="img-fluid" src="assets/FillingStation.jpeg" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">The Filling Station</div>
@@ -162,20 +177,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="/assets/supper.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Supper Club</div>
-                                <div class="portfolio-caption-subheading text-muted">We believe that some of the most intimate times of connection is over a meal. Once a month members of our community come together for a time of fellowship at a local Atlanta restaurant.</div>
-                            </div>
-                        </div> -->
                     </div>
                     <!-- <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                         <div class="portfolio-item">
@@ -362,7 +363,7 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">The Conversation</h3>
                                     <!-- <p class="item-intro text-muted">A s</p> -->
-                                    <img class="img-fluid d-block mx-auto" src="assets/Passion.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/Passion.jpeg" alt="" />
                                     <p><a class="text-info" href="https://www.eventbrite.com/o/your-soul-care-community-inc-501c3-corp-17037674680"><strong>Click here</strong></a> for more information about our current and upcoming Conversation Events.</p>
                                     
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -388,7 +389,7 @@
                                     <!-- Project Details Go Here-->
                                     <h3 class="text-uppercase">Community Service</h3>
                                     <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
-                                    <img class="img-fluid d-block mx-auto" src="assets/CommSVC.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/CommSvc.jpeg" alt="" />
                                     <p>The journey to wholeness begins on the most basic levels of our humanity.  YSCC is committed to serving our communities but we can only do so with your help. Consider making a <a class="text-info" href="https://www.paypal.com/donate?hosted_button_id=W46W5JCG9BY2Y">donation</a> today! 
 
                                     </p>
@@ -414,11 +415,15 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">The Filling Station</h2>
+                                    <h2 class="text-uppercase">Supper Club</h2>
                                     <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
-                                    <img class="img-fluid d-block mx-auto" src="assets/fillingstation.jpg" alt="" />
-                                    <p><a class="text-info" href="https://www.eventbrite.com/o/your-soul-care-community-inc-501c3-corp-17037674680"><strong>Click here</strong></a> for more information about our current and upcoming workshop and Master Class offerings.</p>
-                                    
+                                    <img class="img-fluid d-block mx-auto" src="assets/SupperClub.jpeg" alt="" />
+                                    <p>Come "sup" with us if you're in the Atlanta area. May dates and times coming soon!</p>
+                                    <!-- <ul class="list-inline">
+                                        <li>Date: May 2022</li>
+                                        <li>Where: TBD</li>
+                                        <li>Time: TBD</li>
+                                    </ul> -->
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Close
@@ -440,15 +445,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Supper Club</h2>
+                                    <h2 class="text-uppercase">The Filling Station</h2>
                                     <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
-                                    <img class="img-fluid d-block mx-auto" src="/assets/supper.jpg" alt="" />
-                                    <p>Come "sup" with us if you're in the Atlanta area. May dates and times coming soon!</p>
-                                    <ul class="list-inline">
-                                        <li>Date: May 2021</li>
-                                        <li>Where: Breakfast at Barney's</li>
-                                        <li>Time: TBD</li>
-                                    </ul>
+                                    <img class="img-fluid d-block mx-auto" src="assets/FillingStation.jpeg" alt="" />
+                                    <p><a class="text-info" href="https://www.eventbrite.com/o/your-soul-care-community-inc-501c3-corp-17037674680"><strong>Click here</strong></a> for more information about our current and upcoming workshop and Master Class offerings.</p>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Close
